Switch back to using add event to automatically re-render AppView

--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
     <script src="views/AppView.js"></script>
 
     <div class="inputNewArticle">
-    <form action="/newarticle" method="post">
+    <form class="formNewArticle" action="/newarticle" method="post">
         <input name="url" style="display:inline" class="addUrl" type="text" size="35" placeholder="Insert URL">
         <input name="title" style="display:inline" class="addTitle" type="text" size="35" placeholder="Insert Title">
         <input class="FetchURL" type="button" value="Fetch title"><br>
