--- a/client/index.html
+++ b/client/index.html
@@ -2,25 +2,39 @@
 <html>
   <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <script src="bower_components/jquery/jquery.js"></script>
+  <script src="bower_components/underscore/underscore.js"></script>
+  <script src="bower_components/backbone/backbone.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+
+  <script src="data/data.js"></script>
+
+  <script src="models/Article.js"></script>
+  <script src="collections/Articles.js"></script>
+  <script src="models/AppModel.js"></script>
+
+  <script src="views/ArticlesView.js"></script>
+  <script src="views/ArticleShortView.js"></script>
+  <script src="views/AppView.js"></script>
+  <script>
+    $(function(){
+      // set up model objects
+      // var library = new Articles({collection: articleData});
+      var app = new AppModel();
+
+      // build a view for the top level of the whole app
+      var appView = new AppView({model: app});
+
+      // put the view onto the screen
+      $('body').append(appView.render());
+    });
+  </script>
   </head>
   <body>
     <!-- Scripts may be placed anywhere on a page. But FYI, they block rendering of elements
      below them until after the scripts load-->
-    <script src="bower_components/jquery/jquery.js"></script>
-    <script src="bower_components/underscore/underscore.js"></script>
-    <script src="bower_components/backbone/backbone.js"></script>
 
-    <script src="data/data.js"></script>
-
-    <script src="models/Article.js"></script>
-    <script src="collections/Articles.js"></script>
-    <script src="models/AppModel.js"></script>
-
-    <script src="views/ArticlesView.js"></script>
-    <script src="views/ArticleShortView.js"></script>
-    <script src="views/AppView.js"></script>
-
-    <div class="inputNewArticle">
+    <div class="inputNewArticle col-med-4">
     <form class="formNewArticle" action="/newarticle" method="post">
         <input name="url" style="display:inline" class="addUrl" type="text" size="35" placeholder="Insert URL">
         <input name="title" style="display:inline" class="addTitle" type="text" size="35" placeholder="Insert Title">
@@ -30,19 +44,5 @@
         <input type="submit" class="add" value="Add to library">
     </form>
     </div>
-
-    <script>
-      $(function(){
-        // set up model objects
-        // var library = new Articles({collection: articleData});
-        var app = new AppModel();
-
-        // build a view for the top level of the whole app
-        var appView = new AppView({model: app});
-
-        // put the view onto the screen
-        $('body').append(appView.render());
-      });
-    </script>
   </body>
 </html>
