Clean up article creation code

--- a/client/index.html
+++ b/client/index.html
@@ -41,7 +41,7 @@
         <input class="FetchURL" type="button" value="Fetch title"><br>
         <textarea name="summary" class="addSummary" placeholder="Summarize the article" rows="10" cols="35"></textarea>
         <input name="tags" class="addTags" style="display:block" size="35" placeholder="Add comma-delimited tags"></input>
-        <input type="submit" class="add" value="Add to library">
+        <input type="button" class="add" value="Add to library">
     </form>
     </div>
   </body>
