Pass {wait: true} to create call and refactor promises chain to be more idiomatic

--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,7 @@
      below them until after the scripts load-->
     
     <nav class="navbar navbar-default">
-      <a href="article">Articles</a>
+      <a href="/article">Articles</a>
     </nav>
     <div class="inputNewArticle col-med-4">
     <form class="formNewArticle" action="/newarticle" method="post">
